# indicator-sysmonitor

./: .gitignore  AUTHORS  BudgieSysMonitor.plugin  Makefile  README.md  budgiesysmonitor.py  indicator-sysmonitor  indicator-sysmonitor.bak  indicator-sysmonitor.desktop  meson.build  meson_options.txt  nohup.out  preferences.py  preferences.ui  sensors.py
budgie/: BudgieSysMonitor.plugin.in  budgiesysmonitor.py  budgiesysmonitor.py.in  meson.build
data/: meson.build
debian/: budgie-sysmonitor-applet.install  changelog  control  copyright  dirs  indicator-sysmonitor.links  rules  watch
indicator_sysmonitor/: indicator-sysmonitor  meson.build
sysmonitor_common/: meson.build  preferences.py  sensors.py
